@@ -9,6 +9,7 @@ ostree (2016.4-1) UNRELEASED; urgency=medium
   * Fix ITP bug number in changelog (was #813308, should have been #697477)
   * debian/control: build-depend on attr, for the tests (only required if
     /var/tmp supports extended attributes)
+  * debian/rules: warn if there are leftover daemon processes after testing
 
  -- Simon McVittie <smcv@debian.org>  Mon, 28 Mar 2016 12:02:59 +0100
 
